--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background: linear-gradient(to right, #ad5389, #3c1053);
+  background: linear-gradient(to right, #ad5389, #882cba);
+  /* background: #091921; */
   color: #fff;
   font-size: 22px;
   font-weight: bold;
@@ -13,7 +14,7 @@ body {
   width: 275px;
   height: auto;
   margin: 100px auto;
-  background-color: black;
+  background-color: rgb(18, 18, 19);
   padding: 10px;
   border-radius: 15px;
 }
