Change background color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: linear-gradient(to right, #ad5389, #882cba);
+  background: linear-gradient(to right, #ad5389, #86ba2c);
   /* background: #091921; */
   color: #fff;
   font-size: 22px;
